# cross_compile_fun

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  README.rst  build.gradle  build_log.txt  index.html  main.js  main.wasm
.github/workflows/: web-build.yml
.zed/: settings.json
apps/: CMakeLists.txt  attributions.txt  foo.cpp  main-opengl.cpp  main-vulkan.cpp  main.cpp
apps/appimage/: AppRun  crossfun.desktop
build32/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake  compile_commands.json
build32/apps/: CTestTestfile.cmake  cmake_install.cmake  main.js  main.wasm
build32/source/: CTestTestfile.cmake  cmake_install.cmake
build32/tests/: CTestTestfile.cmake  cmake_install.cmake
gradle/: .project  android.export.sym  build.gradle.kts  local.properties
gradle/app/: .project  build.gradle.kts
gradle/app/src/main/: AndroidManifest.xml
gradle/app/src/main/assets/: demo.rml
gradle/app/src/main/java/org/libsdl/app/: HelloWorldActivity.java
gradle/app/src/main/java/org/mccakit/app/: Bt.java  HelloWorldActivity.java
include/: sdl_load.hpp
include/glad/glad/: glad.h
source/: CMakeLists.txt  sdl_load.cpp  sdl_load_apple.cpp
source/glad/: glad.c
src/: CMakeLists.txt  bt.cppm  gl_config.cppm  scroll.cppm  sdl_load_wrapper.cppm  texture.cppm  widgets.cppm
src/glad/include/glad/: glad.h
src/glad/src/: glad.c
tests/: CMakeLists.txt  testlib.cpp
toolchains/: android-arm64.cmake  android_ndk-arm64.cmake  arch-x64.cmake  debian-arm64.cmake  debian-x64.cmake  emcc-wasm32.cmake  emcc-wasm64.cmake  fedora-arm64.cmake  fedora-x64.cmake  ios-arm64.cmake  iossim-arm64.cmake  iossim-x64.cmake  llvm-ios-arm64.cmake  llvm-iossim-x64.cmake  llvm-linux-arm64.cmake  llvm-linux-x64.cmake  llvm-macos-arm64.cmake  llvm-macos-x64.cmake  llvm-win-arm64.cmake  llvm-win-x64.cmake  macos-arm64.cmake  macos-x64.cmake  opensuse-tumbleweed-arm64.cmake  opensuse-tumbleweed-x64.cmake  osxcross-osx-arm64.cmake  win-arm64.cmake  win-x64.cmake
